Fixing column behavior on mobile
Added classes to make column layout more pleasing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,14 @@ textarea {
 		border-top: 1px solid #415065;
 	}
 
+	.column-list {
+		
+	}
+
+	.columns-2 {
+		columns: 2;
+	}
+
 	footer {
 		display: block;
 		text-align: center;
@@ -337,6 +345,14 @@ textarea {
 		header span br { display: none; }
 	}
 
+	@media (max-width: 800px) {
+		.columns-2 {
+			columns: unset;
+		}
+		.column-list {
+			padding: 0 0 0 2rem;
+		}
+	}
 
 
 
